# timtam

./: .repo-diagram.dhall  ChangeLog.md  README.md  README.org  bdscod.cabal  shell.nix  stack.yaml
.github/workflows/: main.yml  repo-diagram.yml
R/: llhd-profiles.R  manceau-comparison.R
apps/manceau-comparison/: Main.hs
apps/mcmc/: Main.hs
apps/prevalence-at-tmrca/: Main.hs
apps/simulation-study/: Main.hs
apps/simulation-study-aggregated-observations/: Main.hs
apps/simulation-study-time-dependent-rates/: Main.hs
apps/simulation-study-time-series/: Main.hs
apps/timing-evaluation/: Main.hs
examples/: .gitignore  README.org  colours.json  example-parameters.json  mcmc-demo.json
examples/ape-simulation/: README.org  ape-sim.R  ape-simulation.R  clean.sh  makefile  run.sh
examples/ape-simulation-2/: README.org  makefile
examples/ape-simulation-2/src/: assemble-plots.R  make-config.R  make-viewer.R  plot-unscheduled-data.R  post-mcmc-visualisation.R  post-processing-unscheduled-data.R
examples/ape-simulation/src/: make-viewer.R  mcmc-plots.R  prep-mcmc-data.R
examples/choosing-parameters/: README.org
examples/choosing-parameters/data/: number-sequences.csv  r-naught-wpd.csv  sampling-proportion-wpd.csv  table.csv  total-cases-wpd.csv
examples/ci-calibration-2/: README.org  index.html  makefile
examples/ci-calibration-2/src/: build-calibration-figures.R  build-prevalence-calibration.R  build-viewer.R  make-config.R  run-mcmc.sh  simulate-datasets.R  summarise-mcmc-samples.R
examples/manceau-comparison/: README.md  makefile
examples/manceau-comparison/src/: plot-comparison.R
examples/prevalence-at-tmrca/: .gitignore  README.org
examples/prevalence-at-tmrca/src/: make-app-config.R  plot.R
examples/prevalence-ci-calibration/: .gitignore  README.org  clean.sh  generate-config-files.R  plotter.R  run.sh  scratch.R  temp-run.sh  timtam-report-template.html  timtam-report.html
examples/prevalence-ci-calibration/src/: generate-config-files.R  plotter.R  summarize-results.R
examples/simulation-study/: README.md  makefile
examples/simulation-study-aggregated-observations/: .gitignore  README.org  scratch.R
examples/simulation-study-aggregated-observations/src/: make-json-config.R  plot.R  vis-llhd-profiles.R
examples/simulation-study-time-dependent-rates/: README.md  plot-simulation-study-time-dependent-rates.R  simulation-study-time-dependent-rates-config.R
examples/simulation-study-time-series/: README.md  README.org  clean.sh  run-inference.sh  run-visualisation.sh  run.sh  ts-config.json  viewer.html
examples/simulation-study-time-series/src/: make-json-config.R  plot-llhd-profiles.R  plot-simulated-data.R
examples/simulation-study/src/: json-config.R  llhd-profiles.R  parameter-table-template.tex  parameter-table.R  tree-figure.R
examples/timing-evaluation/: .gitignore  README.md  README.org  app-config.json  config.json  criterion-page.html  criterion-times.csv  makefile  requirements.txt  run-python-timing.sh  timing.py
examples/timing-evaluation/src/: make-json-config.R  plot-llhds.R  plot-profiles.R  prepare-simulation-for-popsize-distribution.R  prepare-simulations-for-popsize.R
src/BDSCOD/: Aggregation.hs  Conditioning.hs  InhomogeneousBDSLlhd.hs  Llhd.hs  Types.hs  Utility.hs
src/Numeric/Minimisation/: Powell.hs
src/Statistics/Distribution/: Lognormal.hs
test/: Spec.hs
