name:                bdscod
version:             0.1.2.8
-- synopsis:
-- description:
homepage:            https://github.com/aezarebski/bdscod#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander E. Zarebski
maintainer:          aezarebski@gmail.com
copyright:           2020 Alexander E. Zarebski
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     ChangeLog.md


library
  exposed-modules: BDSCOD.Llhd
                   BDSCOD.Conditioning
                   BDSCOD.Utility
                   BDSCOD.Types
                   BDSCOD.InhomogeneousBDSLlhd
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , bytestring >= 0.10
               , deepseq >= 1.4.4.0
               , cassava >= 0.5
               , epi-sim >= 0.2.0.1
               , vector
               , aeson
               , epi-types >= 0.2.1.2
  default-language:    Haskell2010
  -- ghc-options:         -fwarn-tabs -Wmissing-signatures -threaded -O2 -fwarn-incomplete-patterns
  ghc-options:        


executable manceau-comparison
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/manceau-comparison
  ghc-options: 
  build-depends:
      base >=4.7 && <5
    , bytestring
    , cassava
    , epi-types >= 0.2.1.2
    , epi-sim >= 0.2.0.1
    , bdscod
    , hspec
    , vector
  default-language: Haskell2010


executable simulation-study
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/simulation-study
  ghc-options: 
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , cassava
    , containers >= 0.6
    , directory
    , epi-sim >= 0.2.0.1
    , epi-types >= 0.2.1.2
    , bdscod
    , hspec
    , vector
  default-language: Haskell2010

executable simulation-study-time-series
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/simulation-study-time-series
  ghc-options: 
  build-depends:
      base >=4.7 && <5
    , aeson
    , bdscod
    , bytestring
    , cassava
    , directory
    , epi-sim >= 0.2.0.1
    , epi-types >= 0.2.1.2
    , hmatrix >= 0.20.0.0
    , hmatrix-gsl >= 0.19.0.1
    , mtl >= 2.2
    , vector
  default-language: Haskell2010

executable simulation-study-time-dependent-rates
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/simulation-study-time-dependent-rates
  ghc-options: 
  build-depends:
      base >=4.7 && <5
    , bytestring
    , aeson
    , cassava
    , epi-types >= 0.2.1.2
    , epi-sim >= 0.2.0.1
    , bdscod
  default-language: Haskell2010


executable timing-evaluation
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/timing-evaluation
  ghc-options: 
  build-depends:
                  base             >=4.7 && <5
                , abstract-par
                , aeson
                , bdscod
                , bytestring       >= 0.10
                , criterion        == 1.5.6.2
                , cassava >= 0.5
                , deepseq          >= 1.4.4.0
                , epi-types >= 0.2.1.2
                , epi-sim >= 0.2.0.1
                , statistics       >= 0.15
  default-language: Haskell2010


test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      test
  ghc-options:
  build-depends:
      base >=4.7 && <5
    , bdscod
    , epi-sim >= 0.2.0.1
    , epi-types >= 0.2.1.2
    , hmatrix >= 0.20.0.0
    , hmatrix-gsl >= 0.19.0.1
    , hspec
    , vector
  default-language: Haskell2010