name:                bdscod
version:             0.1.2.15
-- synopsis:
-- description:
homepage:            https://github.com/aezarebski/bdscod#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander E. Zarebski
maintainer:          aezarebski@gmail.com
copyright:           2020 Alexander E. Zarebski
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     ChangeLog.md


library
  exposed-modules: BDSCOD.Llhd
                   BDSCOD.Conditioning
                   BDSCOD.Utility
                   BDSCOD.Types
                   BDSCOD.InhomogeneousBDSLlhd
  hs-source-dirs:
      src
  build-depends: base >= 4.7 && < 5
               , bytestring >= 0.10
               , deepseq >= 1.4.4.0
               , cassava >= 0.5
               , epi-sim >= 0.2.2.0
               , vector
               , aeson
  default-language:    Haskell2010
  ghc-options:         -fwarn-tabs -Wmissing-signatures -threaded -O2 -fwarn-incomplete-patterns
  -- ghc-options:        


executable manceau-comparison
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/manceau-comparison
  ghc-options: 
  build-depends:
      base
    , bytestring
    , cassava
    , epi-sim
    , bdscod
    , hspec
    , vector
  default-language: Haskell2010


executable simulation-study
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/simulation-study
  ghc-options: 
  build-depends:
      base
    , aeson
    , bytestring
    , cassava
    , containers >= 0.6
    , directory
    , epi-sim
    , bdscod
    , hspec
    , vector
  default-language: Haskell2010

executable simulation-study-time-series
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/simulation-study-time-series
  ghc-options: 
  build-depends:
      base
    , aeson
    , bdscod
    , bytestring
    , cassava
    , directory
    , epi-sim
    , hmatrix >= 0.20.0.0
    , hmatrix-gsl >= 0.19.0.1
    , mtl >= 2.2
    , mwc-random >= 0.14
    , vector
  default-language: Haskell2010

executable simulation-study-time-dependent-rates
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/simulation-study-time-dependent-rates
  ghc-options: 
  build-depends:
      base
    , bytestring
    , aeson
    , cassava
    , epi-sim
    , bdscod
  default-language: Haskell2010


executable timing-evaluation
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/timing-evaluation
  ghc-options: 
  build-depends:
                  base             >=4.7 && <5
                , abstract-par
                , aeson
                , bdscod
                , bytestring       >= 0.10
                , criterion
                , cassava
                , deepseq          >= 1.4.4.0
                , epi-sim
                , statistics       >= 0.15
  default-language: Haskell2010


test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      test
  ghc-options:
  build-depends:
      base >=4.7 && <5
    , bdscod
    , epi-sim
    , hmatrix >= 0.20.0.0
    , hmatrix-gsl >= 0.19.0.1
    , hspec
    , mwc-random
    , vector
  default-language: Haskell2010