name:                bdscod
version:             0.1.6
-- synopsis:
-- description:
homepage:            https://github.com/aezarebski/bdscod#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander E. Zarebski
maintainer:          aezarebski@gmail.com
copyright:           2020 Alexander E. Zarebski
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org
                     ChangeLog.md


library
  exposed-modules: BDSCOD.Llhd
                   BDSCOD.Aggregation
                   BDSCOD.Utility
                   BDSCOD.Types
                   BDSCOD.InhomogeneousBDSLlhd
                   Numeric.Minimisation.Powell
                   Statistics.Distribution.Lognormal
  hs-source-dirs:
      src
  build-depends:
                    aeson
                  , either
                  , generic-random
                  , QuickCheck >= 2.13.2
                  , base >= 4.7 && < 5
                  , bytestring >= 0.10
                  , cassava >= 0.5
                  , deepseq >= 1.4.4.0
                  , epi-sim >= 0.3.0.0
                  , hspec-core >= 2.7.4
                  , math-functions
                  , statistics
                  , vector
  default-language:    Haskell2010
  ghc-options:         -fwarn-tabs -Wmissing-signatures -O2 -fwarn-incomplete-patterns


executable simulation-study
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/simulation-study
  ghc-options: 
  build-depends:
      base
    , aeson
    , bytestring
    , cassava
    , containers >= 0.6
    , directory
    , epi-sim
    , bdscod
    , hspec
    , vector
  default-language: Haskell2010

executable simulation-study-time-series
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/simulation-study-time-series
  ghc-options: 
  build-depends:
      base
    , aeson
    , bdscod
    , bytestring
    , cassava
    , directory
    , either
    , epi-sim
    , hmatrix >= 0.20.0.0
    , hmatrix-gsl >= 0.19.0.1
    , mtl >= 2.2
    , mwc-random >= 0.14
    , vector
  default-language: Haskell2010

executable simulation-study-aggregated-observations
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/simulation-study-aggregated-observations
  ghc-options:
  build-depends:
      base
    , aeson
    , bdscod
    , bytestring
    , cassava
    , directory
    , either
    , epi-sim
    , hmatrix
    , hmatrix-gsl
    , mighty-metropolis >= 2.0.0
    , mtl
    , mwc-random
    , statistics
    , vector
  default-language: Haskell2010

executable simulation-study-time-dependent-rates
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/simulation-study-time-dependent-rates
  ghc-options: 
  build-depends:
      base
    , bytestring
    , aeson
    , cassava
    , epi-sim
    , bdscod
  default-language: Haskell2010


executable timing-evaluation
  main-is: Main.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      apps/timing-evaluation
  ghc-options: 
  build-depends:
                  base
                , abstract-par
                , aeson
                , bdscod
                , bytestring
                , criterion        == 1.5.7.0
                , cassava
                , deepseq
                , epi-sim
                , statistics       >= 0.15
  default-language: Haskell2010


test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_bdscod
  hs-source-dirs:
      test
  ghc-options:
  build-depends:
                        base
                      , either
                      , generic-random
                      , QuickCheck >= 2.13.2
                      , bdscod
                      , epi-sim
                      , hmatrix
                      , hmatrix-gsl
                      , hspec
                      , hspec-core >= 2.7.4
                      , mighty-metropolis
                      , mwc-random
                      , vector
  default-language: Haskell2010